master Tune mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@
         'Noto Color Emoji';
     --font-serif: 'Roboto Slab', 'Roboto', 'PT Serif', ui-serif, Cambria, 'Times New Roman', Times, serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+    --breakpoint-xs: 26rem;
 }
